--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel src/main.ts -o src/main_babel.js"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.3.3",
     "jspm": "^0.17.0-beta.41"
   },
   "jspm": {
