--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "es6",
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true
+    "module": "commonjs",
+    "target": "es2015",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules"
